--- a/toymodel/package.json
+++ b/toymodel/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "webpack --mode=development --watch --config config/webpack.config.js",
     "build": "webpack --mode=production --config config/webpack.config.js",
-    "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\""
+    "format": "prettier --write --ignore-unknown \"{config,public}/**/*.{html,css,js,ts,json}\""
   },
   "devDependencies": {
     "copy-webpack-plugin": "^10.2.4",
